build/eks-test-ns/noncore-mqtt/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: noncore-mqtt-service
  namespace: eks-test-ns
spec:
  selector:
    app: noncore-mqtt
  type: ClusterIP
  ports:
  - name: node
    port: 80
    targetPort: 8080
