build/eks-test-ns/noncore-mqtt/ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: noncore-mqtt-ingress
  namespace: eks-test-ns
  labels:
    app: noncore-mqtt
spec:
  rules:
    - host: brdomain.site  #staging-api.rfcx.org
      http:
        paths:
          - path: /(internal/rabbitmq/.*)
            pathType: Prefix
            backend:
              service:
                name: noncore-mqtt-service
                port:
                  number: 80
